Release CMTK-1.1.2:

- Added; logit and logistic functions for imagemath tool.

- Fixed: BioRad header problem resulting from struct field alignment (patch by
    Greg Jefferis).
- Fixed: TemplateArray::GetRangeTemplate() now ignores non-finite values, which
    also fixes a crash in triplanar viewer when reading images with non-finite
    values.


Release CMTK-1.1.1 (2009-09-02):

- Added: "congeal" and "congeal_warp" now optionally match image histograms to
    either template data (if template data is used for registration) or first
    image (if no template is defined or its data is not used).
- Added: groupwise, pairwise, and multi-channel registration tools now each
    support "--delta-f-threshold" option to define termination threshold for
    optimization based on relative target function change.

- Fixed: configuration of type sizes in bundled DICOM library was broken.
- Fixed: file system functions were borken on Windows (MS-VS build) due to use
    of Unix-style directory separators ('/' vs. '\').

- Improved: command line options for "congeal" and "congeal_warp" tools
    streamlined and grouped.
- Improved: help and wiki outputs of command line tool option descriptions now
    include textual descriptions of the argument expected by each option,
    e.g., "float", "string", "image-path".

- Removed: "Mutual Information" variant of RMI-based groupwise registration
    deleted; this turned out to be almost zero and thus useless. For now,
    we're left with optimizing the approximated joint entropy.

- Testing: added tests for all registrations using DeltaF threshold.


Release CMTK-1.1.0 (2009-08-26):

- API: no longer allow short-only options for command lines.
- API: cmtk::SmartPointer now supports smart pointers to constant objects for
    improved const-consistency.
- API: begin decoupling the actual transformation classes (e.g.,
    SplineWarpXform) from their reference image grids (used for
    precomputations). Instead, use classes like the new