@@ -414,6 +414,10 @@ case ${RUNTEST} in
 	run ${BINDIR}/imagemath --float --in pbmap_wm_2.nii --logit --in pbmap_wm_1.nii --logit --average --logistic --out ${tmpdir}/logodds_add.hdr
 	check_result logodds_add.img
 	;;
+    ImagemathLogOddsAdd2)
+	run ${BINDIR}/imagemath --float --in pbmap_wm_2.nii pbmap_wm_1.nii --logit-all --average --logistic-all --out ${tmpdir}/logodds_add.hdr
+	check_result logodds_add.img
+	;;
     LevelsetDefault)
 	run ${BINDIR}/levelset -v vol001_mr_t1.hdr ${tmpdir}/levelset.hdr
 	check_result levelset.img
